objects/Royall_Resource__c.object
<CustomObject>
    <description>This object is synchronized with the active employee list housed in the ADP HRIS.  When an employee is no longer present in ADP, they&apos;re marked as inactive in this object.</description>
    <fields>
        <fullName>Active_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>javascript:HTMLTreeNode.prototype.toggleHTMLTree%28%27Customize%27%29</inlineHelpText>
        <label>Active Employee (RR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>read-only field to establish departmental organization</description>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <description>Employee identity generated by external systems.  This number is appended by the external system when a new Royall Resource appears in the object.  This field should be &quot;view only&quot; for all users.  New employees will be assigned a temporary Employee NUMBER when they&apos;re first hired.  Once they&apos;re entered into ADP the Employee NUMBER will be updated.  This Employee Id protects external systems from the changing numbers.</description>
        <inlineHelpText>Employee identity generated by external systems.  This number is appended by the external system when a new Royall Resource appears in the object.  This field should be &quot;view only&quot; for all users.</inlineHelpText>
        <label>Employee Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <description>This is the number assigned to each employee in the ADP system.  An employee will retain this number if they exit the company and return.</description>
        <label>Employee Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enable_portal_download_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to allow this person to access the &quot;Download&quot; feature in the Client Portal.</description>
        <label>Enable portal &quot;Download&quot; feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_portal_find_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to allow this person to access the &quot;Find&quot; feature in the Client Portal.</description>
        <label>Enable portal &quot;Find&quot; feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_portal_reports_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to allow this person to access the &quot;Reports&quot; feature in the Client Portal.</description>
        <label>Enable portal &quot;Reports&quot; feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Used to track and manage employee termination dates</description>
        <inlineHelpText>Used to track and manage employee termination dates</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>For phone extension #</description>
        <inlineHelpText>For phone extension #</inlineHelpText>
        <label>Extension#</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>left(Name,find(&quot; &quot;,Name)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>The  home phone number.  Mobile numbers are kept separately.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>right(Name,len(Name)-find(&quot; &quot;,Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <formula>$User.License_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the Managers Name here</description>
        <inlineHelpText>Enter the Managers Name here</inlineHelpText>
        <label>Manager&apos;s Name</label>
        <referenceTo>Royall_Resource__c</referenceTo>
        <relationshipLabel>Royall Resources</relationshipLabel>
        <relationshipName>Royall_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked and the resource is active, they have the ability to create custom reports in my.royall.com.</description>
        <label>Portal Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>Preferred name of the resource.  This is typically used for personalizing communications.</description>
        <label>Preferred Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Services Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Strategic Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Systems Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Development Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copywriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Events/Hospitality Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proofreader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC System Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SF_License_Active__c</fullName>
        <formula>$User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF License Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_User_Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>First date of employment with Royall &amp; Company.</description>
        <inlineHelpText>First date of employment with Royall &amp; Company.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Royall_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>Royall Resource</label>
    <listViews>
        <fullName>Active_ASL_Ac_s</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>Role__c</columns>
        <columns>User__c</columns>
        <columns>Enable_portal_reports_feature__c</columns>
        <columns>Enable_portal_find_feature__c</columns>
        <columns>Enable_portal_download_feature__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Employee__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Account Coordinator,Associate Strategic Leader</value>
        </filters>
        <label>Active ASL/Ac&apos;s</label>
    </listViews>
    <listViews>
        <fullName>Advancement_RR</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Active_Employee__c</columns>
        <columns>Email__c</columns>
        <columns>Role__c</columns>
        <columns>Work_Phone__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Portal_Access__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Name__c</field>
            <operation>contains</operation>
            <value>pritcher,reader,struder,williams,ripple,graves,witbeck,mantura,boswell,canfield</value>
        </filters>
        <filters>
            <field>Last_Name__c</field>
            <operation>contains</operation>
            <value>hanchin,parks,marschall,atkins,barrett</value>
        </filters>
        <filters>
            <field>Last_Name__c</field>
            <operation>contains</operation>
            <value>olea,warfel,konrad,franklin,norkus,eudailey,edds,sigler,menez</value>
        </filters>
        <label>Advancement RR</label>
    </listViews>
    <nameField>
        <label>Royall Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Royall Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>